* Wed Feb 12 2020 Alexander Fisher <alex@linfratech.co.uk> 6.4.1-0
- Fix badge URLs in README

* Thu Jan 23 2020 Alexander Fisher <alex@linfratech.co.uk> 6.4.0-0
- Automatically add `@@include` lines to aide.conf
  Previously, when declaring `aide::rule` resources, it was also
  necessary to add the rule name to the `$aide::rules` array.
  By switching to using `concat` this is no longer necessary. Instead the
  `rules` parameter is repurposed to accept a hash of `aide::rule`
  resources.

* Wed Dec 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.4.0-0
- Add EL8 support
- Move the default rules to data in modules
- Make simp-logrotate, simp-syslog, and simp-auditd optional dependencies

* Wed Aug 14 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.3.1-0
- With contributions from ischmidt1235 on GitHub
- Add InSpec compliance tests
- Fix bug in Compliance Engine data
- Add SCAP compliance tests

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.3.0-0
- Add v2 compliance_markup data
- Drop support for Puppet 4
- Add support for Puppet 6
- Add support for puppetlabs-stdlib 6

* Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.2-0
- Replace use of simplib's deprecated Puppet 3 validate_between
  with Simplib::Cron::* types.  This change allows more flexibility
  in cron scheduling.

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Mon Oct 29 2018 Jeanne Greoulich <jeanne.greulich@onyxpoint.com> - 6.2.0-0
- Update badges in README.md
- Static asset update for puppet 5

* Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.2.0-0
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.0-0
- Update Hiera 4 to Hiera 5

* Fri Jul 13 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.4-0