@@ -1,0 +1,15 @@
+---
+# Only FIPS-supported hashes are sha1 and sha256
+aide::aliases:
+  - 'R = p+i+l+n+u+g+s+m+c+sha1+sha256'
+  - 'L = p+i+l+n+u+g+acl+xattrs'
+  - '> = p+i+l+n+u+g+S+acl+xattrs'
+  - 'ALLXTRAHASHES = sha1+sha256'
+  - 'EVERYTHING = R+ALLXTRAHASHES'
+  - 'NORMAL = R'
+  - 'DIR = p+i+n+u+g+acl+xattrs'
+  - 'PERMS = p+i+u+g+acl'
+  - 'LOG = >'
+  - 'LSPP = R'
+  - 'DATAONLY = p+n+u+g+s+acl+selinux+xattrs+sha1+sha256'
+
