@@ -4,7 +4,7 @@ describe 'aide' do
   context 'supported operating systems' do
     on_supported_os.each do |os, os_facts|
       context 'with FIPS enabled' do
-        let(:facts) { 
+        let(:facts) {
           facts = os_facts.dup
           facts['fips_enabled'] = true
           facts
@@ -25,53 +25,54 @@ describe 'aide' do
           it { is_expected.to contain_file('/var/log/aide').with_ensure('directory') }
           it { is_expected.to contain_concat('/etc/aide.conf') }
           it { is_expected.to contain_concat__fragment('aide.conf').with_target('/etc/aide.conf') }
-          it { is_expected.to contain_concat__fragment('aide.conf').with_content(<<EOM
-@@define DBDIR /var/lib/aide
-@@define LOGDIR /var/log/aide
-database=file:@@{DBDIR}/aide.db.gz
-database_out=file:@@{DBDIR}/aide.db.new.gz
-gzip_dbout=yes
-verbose=5
-report_url=file:@@{LOGDIR}/aide.report
 
-R = p+i+l+n+u+g+s+m+c+sha1+sha256
-L = p+i+l+n+u+g+acl+xattrs
-> = p+i+l+n+u+g+S+acl+xattrs
-ALLXTRAHASHES = sha1+sha256
-EVERYTHING = R+ALLXTRAHASHES
-NORMAL = R
-DIR = p+i+n+u+g+acl+xattrs
-PERMS = p+i+u+g+acl
-LOG = >
-LSPP = R
-DATAONLY = p+n+u+g+s+acl+selinux+xattrs+sha1+sha256
+          it { is_expected.to contain_concat__fragment('aide.conf').with_content(<<~EOM
+            @@define DBDIR /var/lib/aide
+            @@define LOGDIR /var/log/aide
+            database=file:@@{DBDIR}/aide.db.gz
+            database_out=file:@@{DBDIR}/aide.db.new.gz
+            gzip_dbout=yes
+            verbose=5
+            report_url=file:@@{LOGDIR}/aide.report
 
-EOM
-          ) }
+            R = p+i+l+n+u+g+s+m+c+sha1+sha256
+            L = p+i+l+n+u+g+acl+xattrs
+            > = p+i+l+n+u+g+S+acl+xattrs
+            ALLXTRAHASHES = sha1+sha256
+            EVERYTHING = R+ALLXTRAHASHES
+            NORMAL = R
+            DIR = p+i+n+u+g+acl+xattrs
+            PERMS = p+i+u+g+acl
+            LOG = >
+            LSPP = R
+            DATAONLY = p+n+u+g+s+acl+selinux+xattrs+sha1+sha256
+            EOM
+          )}
 
           it {
-            expected = <<EOM
-#!/bin/sh
-      /usr/bin/killall -9 aide;
-      wait;
+            expected = <<~EOM
+              #!/bin/sh
+              /usr/bin/killall -9 aide;
+              wait;
 
-      if [ -f /var/lib/aide/aide.db.gz ]; then
-        /bin/nice -n 19 /usr/sbin/aide -c /etc/aide.conf -u;
-      else
-        /bin/nice -n 19 /usr/sbin/aide -c /etc/aide.conf -i;
-      fi
+              if [ -f /var/lib/aide/aide.db.gz ]; then
+                /bin/nice -n 19 /usr/sbin/aide -c /etc/aide.conf -u;
+              else
+                /bin/nice -n 19 /usr/sbin/aide -c /etc/aide.conf -i;
+              fi
 
-      wait;
-      cp /var/lib/aide/aide.db.new.gz /var/lib/aide/aide.db.gz
+              wait;
+              cp /var/lib/aide/aide.db.new.gz /var/lib/aide/aide.db.gz
 
-      # Need to report aide initialize/update failure. Since aide
-      # update returns non-zero error codes even upon success, (return
-      # codes 0 - 7), an easy way to determine an aide failure for
-      # either initialization or update is to detect a copy failure. The
-      # database out will not be created if the initialize/update fails.
-      exit $?
-EOM
-            is_expected.to contain_file('/usr/local/sbin/update_aide').with_content(expected.strip)
+              # Need to report aide initialize/update failure. Since aide
+              # update returns non-zero error codes even upon success, (return
+              # codes 0 - 7), an easy way to determine an aide failure for
+              # either initialization or update is to detect a copy failure. The
+              # database out will not be created if the initialize/update fails.
+              exit $?
+              EOM
+
+            is_expected.to contain_file('/usr/local/sbin/update_aide').with_content(expected)
           }
 
           it { is_expected.to contain_exec('update_aide_db').with_command('/usr/local/sbin/update_aide') }
@@ -85,7 +86,7 @@ EOM
             :syslog        => true,
             :auditd        => true
           }}
- 
+
           it { is_expected.to contain_class('aide::set_schedule') }
           it { is_expected.to contain_cron('aide_schedule').with( {
             :command  => '/bin/nice -n 19 /usr/sbin/aide -C',
@@ -124,17 +125,17 @@ EOM
 
         context 'custom default rules' do
           let(:params) {{
-            :default_rules => <<EOM
-/bin HIGH
-/sbin HIGH
-EOM
+            :default_rules => <<~EOM
+              /bin HIGH
+              /sbin HIGH
+              EOM
           }}
           it { is_expected.to create_file('/etc/aide.conf.d/default.aide').with_content(/\/bin\s+HIGH/) }
         end
       end
 
       context 'with FIPS disabled' do
-        let(:facts) { 
+        let(:facts) {
           facts = os_facts.dup
           facts['fips_enabled'] = false
           facts
@@ -142,29 +143,50 @@ EOM
 
         context 'with default parameters' do
           it { is_expected.to create_class('aide') }
-          it { is_expected.to contain_concat__fragment('aide.conf').with_content(<<EOM
-@@define DBDIR /var/lib/aide
-@@define LOGDIR /var/log/aide
-database=file:@@{DBDIR}/aide.db.gz
-database_out=file:@@{DBDIR}/aide.db.new.gz
-gzip_dbout=yes
-verbose=5
-report_url=file:@@{LOGDIR}/aide.report
+          if os_facts[:operatingsystemmajrelease] < '8'
+            it { is_expected.to contain_concat__fragment('aide.conf').with_content(<<~EOM
+              @@define DBDIR /var/lib/aide
+              @@define LOGDIR /var/log/aide
+              database=file:@@{DBDIR}/aide.db.gz
+              database_out=file:@@{DBDIR}/aide.db.new.gz
+              gzip_dbout=yes
+              verbose=5
+              report_url=file:@@{LOGDIR}/aide.report
 
-R = p+i+l+n+u+g+s+m+c+sha512
-L = p+i+l+n+u+g+acl+xattrs
-> = p+i+l+n+u+g+S+acl+xattrs
-ALLXTRAHASHES = sha1+sha256+sha512
-EVERYTHING = R+ALLXTRAHASHES
-NORMAL = R
-DIR = p+i+n+u+g+acl+xattrs
-PERMS = p+i+u+g+acl
-LOG = >
-LSPP = R
-DATAONLY = p+n+u+g+s+acl+selinux+xattrs+sha512
+              R = p+i+l+n+u+g+s+m+c+sha512
+              L = p+i+l+n+u+g+acl+xattrs
+              > = p+i+l+n+u+g+S+acl+xattrs
+              ALLXTRAHASHES = sha1+sha256+sha512
+              EVERYTHING = R+ALLXTRAHASHES
+              NORMAL = R
+              DIR = p+i+n+u+g+acl+xattrs
+              PERMS = p+i+u+g+acl
+              LOG = >
+              LSPP = R
+              DATAONLY = p+n+u+g+s+acl+selinux+xattrs+sha512
+              EOM
+            ) }
+          else
+            it { is_expected.to contain_concat__fragment('aide.conf').with_content(<<~EOM
+              @@define DBDIR /var/lib/aide
+              @@define LOGDIR /var/log/aide
+              database=file:@@{DBDIR}/aide.db.gz
+              database_out=file:@@{DBDIR}/aide.db.new.gz
+              gzip_dbout=yes
+              verbose=5
+              report_url=file:@@{LOGDIR}/aide.report
 
-EOM
-          ) }
+              ALLXTRAHASHES = sha1+sha256+sha512
+              EVERYTHING = R+ALLXTRAHASHES
+              NORMAL = R
+              DIR = p+i+n+u+g+acl+xattrs
+              PERMS = p+i+u+g+acl
+              LOG = >
+              LSPP = R
+              DATAONLY = p+n+u+g+s+acl+selinux+xattrs+sha512
+              EOM
+            ) }
+          end
         end
       end
     end
