@@ -11,4 +11,3 @@ report_url=<%= report_url %>
 <% @aliases.each do |a| -%>
 <%= a %>
 <% end -%>
-
